[BL-763] Resolve  Address drop down alignment is distorted when entering the long characters in the field

--- a/bin/custom/blstorefront/web/webroot/_ui/responsive/theme-bltheme/css/cart.css
+++ b/bin/custom/blstorefront/web/webroot/_ui/responsive/theme-bltheme/css/cart.css
@@ -138,12 +138,21 @@ input[type=radio] + label:before { height: 20px; width: 20px; }
     background-size: 10px;
     background-position: right;
     background-position-x: calc(100% - 18px);
+    text-transform: inherit;
   }
   .accordion select::-ms-expand {
     display: none !important;
+    width: 100%;
   }
 
   .accordion select {
    -moz-appearance: none;
    -webkit-appearance: none;
+   width: 100%;
+   white-space: break-spaces;
   }
+  .accordion select option{
+      overflow: hidden;
+      white-space: break-spaces;      
+  }
+  
